--- a/physionic/src/App.css
+++ b/physionic/src/App.css
@@ -79,7 +79,7 @@
   font-weight: 500;
   margin: 20px 0px;
 }
-.appointment form input{
+.appointment form input,select{
   padding: 10px 10px;
   border-radius: 5px;
   border: solid 1px rgb(220, 220, 220);
@@ -94,7 +94,7 @@
   font-weight: bold;
   margin: 40px 0px;
 }
-.leading{padding: 50px 0px;}
+.leading{padding: 50px 0px;background-color: white;}
 .leading div{
   margin-left: auto;
   margin-right: auto;
@@ -196,7 +196,8 @@
   margin-right: auto;
 }
 .price-card-cont{
-  width: 300px;
+  width: 325px;
+  height: fit-content;
   background-color: white;
   border: solid 1px rgb(0, 170, 255);
   border-radius: 10px;
@@ -217,11 +218,66 @@
   margin-top: 0px;
   margin-bottom: 0px;
 }
-.feature-list{margin:20px;}
+.feature-list{margin:25px;}
 .feature-list div{
   display: flex;
   flex-direction: row;
   align-items: center;
+  text-align: left;
+  font-weight: 500;
+}
+.wraper{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: end;
+  margin: 70px auto;
+  gap: 2px;
+}
+.standard-card{
+  background-color: rgb(22, 1, 57);
+  color: white;
+  height: 90vh;
+}
+.get-in-touch{
+  padding: 50px 13vw;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  background-color: rgb(22,1,57);
+  color: white;
+}
+.get-in-touch .left{
+  width: 500px;
+  text-align: left;
+}
+.get-in-touch .right input{
+  width: 200px;
+  padding: 10px;
+  border: solid 1px white;
+  border-radius: 5px 0px 0px 5px;
+}
+.get-in-touch .right button{
+  padding: 10px;
+  border: solid 1px white;
+  background-color: rgb(0, 170, 255);
+  color: white;
+  border-radius: 0px 5px 5px 0px;
+}
+.footer{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  text-align: left; 
+  background-color: white;
+}
+.footer .division{
+  margin: 50px 80px;
+}
+.footer .division div{
+  display: flex;
+  gap: 10px;
 }
 
 
