--- a/physionic/src/App.css
+++ b/physionic/src/App.css
@@ -62,7 +62,7 @@
 }
 .appointment{
   width: 330px;
-  height: 80vh;
+  height: 600px;
   border-radius: 10px;
   background-color: white;
   position:absolute;
@@ -237,7 +237,7 @@
 .standard-card{
   background-color: rgb(22, 1, 57);
   color: white;
-  height: 90vh;
+  height: 680px;
 }
 .get-in-touch{
   padding: 50px 13vw;
