--- a/physionic/src/App.css
+++ b/physionic/src/App.css
@@ -2,19 +2,19 @@
   text-align: center;
 }
 .nav-cont{
+  width: 100%;
   position: absolute;
   top: 0%;
   display: flex;
   flex-direction: row;
   align-items: center;
-  margin-left: 10%;
-  margin-right: 10%;
   color: white;
 }
 .nav-left{
   display: flex;
   flex-direction: row;
   align-items: center;
+  margin-left: 10%;
 }
 .nav-left div{
   display: flex;
@@ -25,13 +25,15 @@
   margin: auto 10px;
 }
 .nav-cont button{
+  margin-right: 10%;
   background-color: rgb(0, 170, 255);
   border: none;
   padding: 12px 20px;
   border-radius: 6px;
   color: white;
   font-weight: bold;
-  margin-left:37vw;
+  position: absolute;
+  right: 0%;
   display: flex;
   align-items: center;
 }
@@ -67,7 +69,7 @@
   background-color: white;
   position:absolute;
   top:15%;
-  right:11%;
+  right:10%;
 }
 .appointment form{
   display: flex;
@@ -138,6 +140,7 @@
   width: 80vw; 
   display: flex;
   flex-direction: row;
+  gap: 30px;
   margin: 50px 0px;
 }
 .ratings{
@@ -167,6 +170,7 @@
   width: 80vw;
   display: flex;
   flex-direction: row;
+  gap: 30px;
   justify-content: center;
   margin-left: auto;
   margin-right: auto;
@@ -279,5 +283,7 @@
   display: flex;
   gap: 10px;
 }
-
+@media (max-width:767px){
+  
+}
 
